# VisionAiry2

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
scripts/: init_db.py  run_dashboard.sh  seed_watchlist.py
src/: __init__.py  cli.py  config.py
src/agents/: base.py  context.py
src/agents/personas/: burry.py  druckenmiller.py  lynch.py  wood.py
src/agents/synthesis/: daily_brief.py  gap_analysis.py  portfolio_manager.py  report_writer.py  risk.py
src/dashboard/: app.py  data.py  live_data.py  routes.py
src/ingestion/: __init__.py  deduper.py  extractor.py  fetcher.py  scorer.py  ticker_resolver.py
src/llm/: claude.py  client.py  deepseek.py  fallback.py  gemini.py  pricing.py
src/modes/: _pipeline.py  analyse_doc.py  discover.py
src/reports/: compiler.py  template.py
src/sources/: __init__.py  alpha_vantage.py  arxiv.py  base.py  biorxiv.py  clinicaltrials.py  crossref.py  edgar.py  edgar_fulltext.py  eia.py  findata.py  finnhub.py  firecrawl.py  fmp.py  fred.py  gdelt.py  github.py  guardian.py  hackernews.py  marketaux.py  newsapi.py  newsdata.py  nsf.py  openalex.py  openfda.py  papers_with_code.py  polygon_ipo.py  registry.py  sbir.py  sec_tickers_delta.py  tavily.py  usaspending.py  wikidata.py  world_bank.py  yfinance_client.py
src/storage/: db.py  files.py  models.py  repositories.py
tests/: smoke.py
tests/test_agents/: test_personas.py
tests/test_dashboard/: test_routes.py
tests/test_ingestion/: test_deduper.py  test_extractor.py  test_fetcher.py  test_scorer.py
tests/test_sources/: test_clients.py
(+15 files in other folders)
