[project]
name = "visionairy2"
version = "0.1.0"
description = "Multi-agent research system for technology / AI / robotics / batteries / materials / pharma / defence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "python-ulid>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.7",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "openai>=1.50",
    "edgartools>=5.30.2",
    "yfinance>=1.3.0",
    "markdown>=3.10.2",
]

[project.scripts]
visionairy2 = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
